--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -56,11 +56,11 @@ header {
     opacity: 0.95;
     color: black;
     font-size: 16px;
-    position: absolute;
-    top: 0;
-    z-index:1;
 
     position: fixed;
+    top: 0;
+
+    z-index: 1;
 }
 
 .menu-container{
